crates/service/tests/completion/snapshots/features__completion__func_type__return_call_indirect_following_dollar.snap
---
source: crates/service/tests/completion/func_type.rs
expression: response
---
[
  {
    "label": "$a",
    "labelDetails": {
      "detail": "(struct)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 27
        },
        "end": {
          "line": 5,
          "character": 28
        }
      },
      "newText": "$a"
    }
  },
  {
    "label": "$b",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 27
        },
        "end": {
          "line": 5,
          "character": 28
        }
      },
      "newText": "$b"
    }
  }
]
