crates/service/tests/completion/snapshots/features__completion__func_type__sorting.snap
---
source: crates/service/tests/completion/func_type.rs
expression: response
---
[
  {
    "label": "$a",
    "labelDetails": {
      "detail": "(struct)"
    },
    "kind": 8,
    "sortText": "1"
  },
  {
    "label": "$b",
    "labelDetails": {
      "detail": "(array)"
    },
    "kind": 8,
    "sortText": "1"
  },
  {
    "label": "$c",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0"
  }
]
